push first post

--- a/_posts/2024-07-22-cic.md
+++ b/_posts/2024-07-22-cic.md
@@ -1,6 +1,17 @@
 ---
 layout: post
-title: Northeastern's Center for Inclusive Computing
+title: Overview of Northeastern's Center for Inclusive Computing
 ---
 
-As part of my DREAM project, I am very lucky to have the oppertunity to work with Northeastern's Center for Inclusive Computing led by Carla Brodley, PhD. 
+As part of my DREAM project, I have the opportunity to work with Northeastern's Center for Inclusive Computing (CIC) led by Carla Brodley, PhD. Founded in 2019, the goal of the CIC is to remove barriers and create equitable access to computing education through research backed interventions.  To date, the CIC has partnered with over 60 colleges and universities at the undergraduate level to implement systematic changes which increased enrollment and persistence of  women in computing. Additionally, the CIC has partnered with over 50 schools at the graduate level to expand "bridge" pathways to computing for students with non-computing undergraduate backgrounds.  These programs are near and dear to my heart as someone who discovered computing later in life.
+
+At the undergraduate level, the CIC focuses their work and research on three intervention areas:
+* Changes to student support
+* Changes to the introductory sequence
+* Changes to the major
+
+Within 'Changes to Student Support', the CIC argues that TA training, recruiting, and evaluation needs to be centralized.  Co-curricular supports, like advising, need to align with curriculums especially as curriculums get updated. Degree plans need to be accessible and visible on schools’ websites for prospective students, current students, and students interested in the major.
+
+Within 'Changes to the Introductory Sequence', the CIC recommends many initiatives that allows students differing levels of prior computing experience (including beginners) to pursue a degree in computing.  First schools can restructure their intro sequences and intro sequence culture to allow students with more coding experience to start further into the sequence and allow true beginners to feel welcome in their intro classes. Second, creating a CS0 course allows students from a broader set of backgrounds to discover computing, and allows these students to pursue the major. Lastly, adding common assessment among the intro sequence give students more resources that work with their learning styles.
+
+Within 'Changes to the Major', the CIC has invested heavily into research on the design and structure of the CS major.  First off, universities should not use GPA as a means of selecting who can pursue a CS degree as this promotes an emphasis on prior computing experience and leads to a lack of diversity within computing. Secondly, computing knowledge is not only needed by those in computer science but also across disciplines.  Northeastern has implemented 46 CS+X curriculums, which allow students to combine computing with another discipline within the sciences, social sciences, ect. Finally, and most relevant to my DREAM project, the CIC has focused on degree requirements themselves.  Research has looked at how the structure of curriculum requirements impacts female representation in completion rates and how math requirements as pre-requisites can hinder progression within the CS curriculum. Current research in this area will be discussed further in a subsequent blog post.
