update blog posts

--- a/_posts/2024-07-22-cic.md
+++ b/_posts/2024-07-22-cic.md
@@ -14,4 +14,9 @@ Within 'Changes to Student Support', the CIC argues that TA training, recruiting
 
 Within 'Changes to the Introductory Sequence', the CIC recommends many initiatives that allows students differing levels of prior computing experience (including beginners) to pursue a degree in computing.  First schools can restructure their intro sequences and intro sequence culture to allow students with more coding experience to start further into the sequence and allow true beginners to feel welcome in their intro classes. Second, creating a CS0 course allows students from a broader set of backgrounds to discover computing, and allows these students to pursue the major. Lastly, adding common assessment among the intro sequence give students more resources that work with their learning styles.
 
-Within 'Changes to the Major', the CIC has invested heavily into research on the design and structure of the CS major.  First off, universities should not use GPA as a means of selecting who can pursue a CS degree as this promotes an emphasis on prior computing experience and leads to a lack of diversity within computing. Secondly, computing knowledge is not only needed by those in computer science but also across disciplines.  Northeastern has implemented 46 CS+X curriculums, which allow students to combine computing with another discipline within the sciences, social sciences, ect. Finally, and most relevant to my DREAM project, the CIC has focused on degree requirements themselves.  Research has looked at how the structure of curriculum requirements impacts female representation in completion rates and how math requirements as pre-requisites can hinder progression within the CS curriculum. Current research in this area will be discussed further in a subsequent blog post.
+Within 'Changes to the Major', the CIC has invested heavily into research on the design and structure of the CS major.  First off, universities should not use GPA as a means of selecting who can pursue a CS degree as this promotes an emphasis on prior computing experience and leads to a lack of diversity within computing. Secondly, computing knowledge is not only needed by those in computer science but also across disciplines.  Northeastern has implemented 46 CS+X curriculums, which allow students to combine computing with another discipline within the sciences, social sciences, ect. Finally, and most relevant to my DREAM project, the CIC has focused on degree requirements themselves.  CIC Research has looked at how the structure of curriculum requirements impacts female representation in completion rates and how math requirements as pre-requisites can hinder progression within the CS curriculum. Current research in this area will be discussed further in a subsequent blog posts since it is most directly related to the current research project.
+
+CIC Website: https://cic.northeastern.edu
+
+
+
