--- a/_posts/2024-08-08-metrics.md
+++ b/_posts/2024-08-08-metrics.md
@@ -15,7 +15,7 @@ To obtain the complexities for the CS programs, I used https://www.curricularana
 [<img src="{{ site.baseurl }}/images/sample_map.png" alt="complexity_map" style="width: 300px;"/>]({{ site.baseurl }}/)
 
 ### Normalized Female Completions
-In this project, we are focused on female diversity within undergraduate CS programs. To measure diversity, we could simply look at the percent of CS graduates who are female, however, with this approach, we are not taking into account the diversity in the school overall.  For example, if the percent of females within a school's CS graduating class is 20%, this may signal that female diversity is low. However, if for the school overall, females only make-up 15% of graduates, the computer science major is doing a better job then the school overall at attracting gender diversity.
+In this project, we are focused on female diversity within undergraduate CS programs. To measure diversity, we could simply look at the percent of CS graduates who are female, however, with this approach, we are not taking into account the diversity in the school overall.  For example, if the percent of females within a school's CS graduating class is 20%, this may signal that female diversity is low. However, if for the school overall, females only make-up 15% of graduates, the computer science major is doing a better job at attracting gender diversity. To calculate a normalized percent of female graduates, we look at the ratio of female CS graduates to overall female graduates.  This ratio is multiplied by .5 to convert the ratio into a percentage.  This methodology assumes the truly equal represenation of males and females is 50/50.
 
 
 
