--- a/_posts/2024-08-08-metrics.md
+++ b/_posts/2024-08-08-metrics.md
@@ -10,12 +10,12 @@ To understand differences in a curriculum, I use a quantitative metric of struct
 
 [What is Curricular Analytics and Why do We Care?](_posts/2024-07-31-curricular_analytics.md)
 
-To obtain the complexities for the CS programs, I used https://www.curricularanalytics.org/.  This is an open source website which allows users to upload a spreadsheet outling a curriculum's courses and the prerequisits structure.  This is a time consumming process as all the classes need to be manually entered and curriculums/pre-reqs need to be obtained from university websites.  Once the files are uploaded, the site creates an acyclic directed graph for the curriculum and calculates the corrisponding metrics. A sample graph is below.
+To obtain the complexities for the CS programs, I used https://www.curricularanalytics.org/.  This is an open source website which allows users to upload a spreadsheet outlining a curriculum's courses and pre-req structure.  This is a time consumming process as all the classes need to be manually entered and curriculums/pre-reqs need to be obtained from university websites.  Once the files are uploaded, the site creates an acyclic directed graph for the curriculum and calculates the corrisponding metrics. A sample graph is below.
 
 [<img src="{{ site.baseurl }}/images/sample_map.png" alt="complexity_map" style="width: 300px;"/>]({{ site.baseurl }}/)
 
 ### Normalized Female Completions
-In this project, we are focused on female diversity within undergraduate CS programs. To measure diversity, we could simply look at the percent of CS graduates who are female, however, with this approach, we are not taking into account the diversity in the school overall.  For example, if the percent of females within a school's CS graduating class is 20%, this may signal that female diversity is low. However, if for the school overall, females only make-up 15% of graduates, the computer science major is doing a better job at attracting gender diversity. To calculate a normalized percent of female graduates, we look at the ratio of female CS graduates to overall female graduates.  This ratio is multiplied by .5 to convert the ratio into a percentage.  This methodology assumes the truly equal represenation of males and females is 50/50.
+In this project, we are focused on the representation of women within undergraduate CS programs. To measure diversity, we could simply look at the percent of CS graduates who are women, however, with this approach, we are not taking into account the the representation of women in the school overall.  For example, if the percent of women within a school's CS graduating class is 20%, this may signal that representation of women is low. However, if for the school overall, women only make-up 15% of graduates, the computer science major is doing a better job at attracting gender diversity. To calculate a normalized percent of female graduates, we look at the ratio of women CS graduates to overall women graduates.  This ratio is multiplied by .5 to convert the ratio into a percentage.  This methodology assumes the represenation of males and females is truly equal.
 
 
 
