--- a/_posts/2024-08-06-abet.md
+++ b/_posts/2024-08-06-abet.md
@@ -5,13 +5,9 @@ title: To ABET or Not to ABET..A Overview of CS Accredication Requirements
 Since my DREAM project is focusing on the ABET accredidations, this blog post will focus on the requirements schools need to meet in order to have thier computer science programs ABET accredited. This is meant to be an informative blog post and not a stance on wether or not schools should seek ABET accredidation.
 
 
-Founded in 1982, ABET is non-profit organization who has put together curriculum accredidation requirements for Engineering and Technology college programs.  
+Founded in 1982, ABET is non-profit organization who has put together curriculum accredidation requirements for Engineering and Technology college programs.  As part of the requirements for Computer Science, a school must put together a set of program objectives and student performance evaluated against those objectives. ABET provides a list of student outcomes that programs need to impliment. 
 
-1) Performance must be evaluated and progress monitored. Student access to advising.
-
-2) Published program objectives 
-
-3) Student Outcomes including:
+**Student Outcomes:**
 1. Analyze a complex computing problem and apply principles of computing and other relevant disciplines to identify solutions.
 2. Design, implement, and evaluate a computing-based solution to meet a given set of computing requirements in the context of the program’s discipline.
 3. Communicate effectively in a variety of professional contexts.
@@ -21,29 +17,18 @@ computing practice based on legal and ethical principles.
 appropriate to the program’s discipline.
 6. Apply computer science theory and software development fundamentals to produce computing-based solutions. [CS]
 
+Most importantly to our study, ABET also provides curriculum guidelines that programs must implement to gain accredidation.
 
-4) Use and document processes evaluating if student outcome are being attained. Results used for continuous imporovement.
-
-5) Curriculum Requirements specify topics
-pline and at least 30 semester credit hours (or equivalent) of up-to-date coverage of fundamental and advanced computing topics that provide both breadth and depth. The computing topics must include:
-1. Techniques, skills, and tools necessary for computing practice.
-2. Principles and practices of security and privacy in computing.
-3. Local and global impacts of computing solutions on individuals, organizations,
-and society.
-
-In addition:
-a. Computer science: At least 40 semester credit hours (or equivalent) that must include:
+**Curriculum Requirements:**
+For CS, the curriculum must consist of 40 credit hours (or equivilent) of computing instruction. Topics must include:
 1. Substantial coverage of algorithms and complexity, computer science theory, concepts of programming languages, and software development.
 2. Substantial coverage of at least one general-purpose programming language.
 3. Exposure to computer architecture and organization, information management, networking and communication, operating systems, and parallel and distributed computing.
 4. The study of computing-based systems at varying levels of abstraction.
 5. A major project that requires integration and application of knowledge and
 skills acquired in earlier course work.
-b. Mathematics and Statistics: At least 15 semester credit hours (or equivalent) that
-must include discrete mathematics, probability, and statistics and must have
-mathematical rigor at least equivalent to introductory calculus.
-c. Science: Coursework that develops and applies the scientific method in a non-
-computing area.
+
+In addition, students must have at least 15 semester credit hours (or equivalent) of math at the rigor of intro calculus or higher and include discrete math, probability, and statistics. A science component is also required with coursework that uses the scientific method in a non-computing area.
 
 
 
