--- a/_posts/2024-08-06-abet.md
+++ b/_posts/2024-08-06-abet.md
@@ -5,7 +5,7 @@ title: To ABET or Not to ABET..A Overview of CS Accredication Requirements
 Since my DREAM project is focusing on the ABET accredidations, this blog post will focus on the requirements schools need to meet in order to have thier computer science programs ABET accredited. This is meant to be an informative blog post and not a stance on wether or not schools should seek ABET accredidation.
 
 
-Founded in 1982, ABET is non-profit organization who has put together curriculum accredidation requirements for Engineering and Technology college programs.  As part of the requirements for Computer Science, a school must put together a set of program objectives and student performance evaluated against those objectives. ABET provides a list of student outcomes that programs need to impliment. 
+Founded in 1982, ABET is non-profit organization who has put together curriculum accredidation requirements for Engineering and Technology college programs.  As part of the requirements for Computer Science, a school must put together a set of program objectives and student performance evaluated against those objectives. ABET provides a list of student outcomes that programs need to impliment. You'll notice from the requirements below that the guidelines provide the number of credit hours of instruction and the topics needed to be taught, however, the guidelines do not require specific courses giving programs some flexibility in how the requirements are implimented.
 
 **Student Outcomes:**
 1. Analyze a complex computing problem and apply principles of computing and other relevant disciplines to identify solutions.
