--- a/_posts/2024-08-06-abet.md
+++ b/_posts/2024-08-06-abet.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: To ABET or Not to ABET..A Overview of CS Accredication Requirements
+title: To ABET or Not to ABET..A Overview of CS Accreditation  Requirements
 ---
-Since my DREAM project is focusing on the ABET accredidations, this blog post will focus on the requirements schools need to meet in order to have thier computer science programs ABET accredited. This is meant to be an informative blog post and not a stance on wether or not schools should seek ABET accredidation.
+Since my DREAM project is focusing on the ABET accreditations, this blog post will focus on the requirements schools need to meet to have their computer science programs ABET accredited. This is meant to be an informative blog post and not a stance on wether or not schools should seek ABET accredidation.
 
 
-Founded in 1982, ABET is non-profit organization who has put together curriculum accredidation requirements for Engineering and Technology college programs.  As part of the requirements for Computer Science, a school must put together a set of program objectives and student performance evaluated against those objectives. ABET provides a list of student outcomes that programs need to impliment. You'll notice from the requirements below that the guidelines provide the number of credit hours of instruction and the topics needed to be taught, however, the guidelines do not require specific courses giving programs some flexibility in how the requirements are implimented.
+Founded in 1982, ABET is non-profit organization who has put together curriculum accreditation requirements for Engineering and Technology college programs.  As part of the requirements for Computer Science, a school must put together a set of program objectives and student performance evaluated against those objectives. ABET provides a list of student outcomes that programs need to implement. You'll notice from the requirements below that the guidelines provide the number of credit hours of instruction and the topics needed to be taught, however, the guidelines do not require specific courses giving programs some flexibility in how the requirements are implemented.
 
 **Student Outcomes:**
 1. Analyze a complex computing problem and apply principles of computing and other relevant disciplines to identify solutions.
@@ -17,10 +17,10 @@ computing practice based on legal and ethical principles.
 appropriate to the program’s discipline.
 6. Apply computer science theory and software development fundamentals to produce computing-based solutions. [CS]
 
-Most importantly to our study, ABET also provides curriculum guidelines that programs must implement to gain accredidation.
+Most importantly to our study, ABET also provides curriculum guidelines that programs must implement to gain accreditation.
 
 **Curriculum Requirements:**
-For CS, the curriculum must consist of 40 credit hours (or equivilent) of computing instruction. Topics must include:
+For CS, the curriculum must consist of 40 credit hours (or equivalent) of computing instruction. Topics must include:
 1. Substantial coverage of algorithms and complexity, computer science theory, concepts of programming languages, and software development.
 2. Substantial coverage of at least one general-purpose programming language.
 3. Exposure to computer architecture and organization, information management, networking and communication, operating systems, and parallel and distributed computing.
