--- a/_posts/2024-12-16-sigcse.md
+++ b/_posts/2024-12-16-sigcse.md
@@ -6,7 +6,7 @@ title: Come See this Project at SIGCSE
 I am very excited that I will be presenting the findings from this project during a poster session at this year's SIGCSE conference in Pittsburg!
 
 ## Writing a Conference Submission
-This was my first submission to a conference! ACM makes submissions easy by having a LaTeX template loaded into overelaf, which formats the paper submission ready.
+This was my first submission to a conference! ACM makes submissions easy by having a LaTeX template loaded into overleaf, which formats the paper to be submission ready.
 
-After writing and revising the inital draft, a committee for the conference reviews the submission to determing if it will be accepted. Comments from the reviews are sent to the authors for incorperation into the final draft, if accepted, or future drafts.  Feedback was the most useful phase, as it helps one become a better writer and researcher!
+After writing and revising the initial draft, a committee for the conference reviews the submission to determine if it will be accepted. Comments from the reviews are sent to the authors for incorporation into the final draft, if accepted, or future drafts.  I am also need to thank my advisor, Albert, and Carla Brodely for reviewing the paper before final submission and providing feedback. Feedback was the most useful phase, as it helps one become a better writer and researcher!
 
